--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "^6.3",
         "livewire/livewire": "^2.0",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-permission": "^5.7"
     },
     "require-dev": {
