--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/framework": "^9.0",
         "laravel/jetstream": "^1.6",
         "laravel/sanctum": "^2.6",
+        "laravel/telescope": "^4.14",
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "^6.3",
         "livewire/livewire": "^2.0",
